k8s/service.yaml
apiVersion: v2
kind: Service
metadata:
  name: tiledesk
spec:
  selector:
    app: tiledesk
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
