k8s/ingress.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "ssl-rtm"
  namespace: "default"
  annotations:
    networking.gke.io/managed-certificates: "rtm-certificate"
spec:
  backend:
    serviceName: "tiledesk-server-1-service"
    servicePort: 80
  rules:
  - http:
      paths:
      - path: "/v2/*"
        backend:
          serviceName: "tiledesk-server-1-service"
          servicePort: 80
    host: "rtm.tiledesk.com"
